--- a/kanban.html
+++ b/kanban.html
@@ -260,6 +260,9 @@
               <div class="kanban-content" id="column-potential">
                 <div class="kanban-title">מתוכנן</div>
                 <div class="kanban-note pink-border">
+                  <span class="material-symbols-outlined select-note-icon">
+                    check
+                  </span>
                   <div class="kanban-note-header">
                     <div class="kanban-note-header__title">
                       <span class="material-symbols-outlined">task</span>
