--- a/kanban.html
+++ b/kanban.html
@@ -271,6 +271,17 @@
                     <span class="note-date">12-01-24</span>
                   </div>
                   <div class="line pink-border"></div>
+                  <div class="list-container">
+                    <div class="list">
+                      <div class="edit-content-menu__category clicked">הכל</div>
+                      <div class="edit-content-menu__category">עובדים</div>
+                      <div class="edit-content-menu__category">קשרים</div>
+                      <div class="edit-content-menu__category" title="קטגוריה שהיא ארוכה">קטגוריה...</div>
+                    </div>
+                    <span class="material-symbols-outlined btn-default expand-btn">
+                      expand_content
+                    </span>
+                  </div>
                   <div class="kanban-note-title">
                     עדכון שדה "מקור משני" ב"כרטסת לקוחות"
                   </div>
@@ -283,6 +294,7 @@
                     <span>משה, דוד, שלמה<span class="material-symbols-outlined add-icon-small">add</span></span>
 
                   </div>
+
                   <div class="kanban-icons">
                     <span class="material-symbols-outlined btn-default change-color"
                       data-toggle="color-menu">palette</span>
