--- a/kanban.html
+++ b/kanban.html
@@ -295,6 +295,27 @@
 
                   </div>
 
+                  <div class="small-boxes-container-second">
+                    <div class="small-box-second pop-in">
+                      <span class="material-symbols-outlined">
+                        home
+                      </span>
+                      <span>כתובות</span>
+                      <span class="material-symbols-outlined btn-default dynamic-btns">
+                        more_vert
+                      </span>
+                    </div>
+                    <div class="small-box-second pop-in">
+                      <span class="material-symbols-outlined">
+                        info
+                      </span>
+                      <span>מידע נוסף</span>
+                      <span class="material-symbols-outlined btn-default dynamic-btns">
+                        more_vert
+                      </span>
+                    </div>
+                  </div>
+
                   <div class="kanban-icons">
                     <span class="material-symbols-outlined btn-default change-color"
                       data-toggle="color-menu">palette</span>
