--- a/kanban.html
+++ b/kanban.html
@@ -317,8 +317,8 @@
                   </div>
 
                   <div class="kanban-icons">
-                    <span class="material-symbols-outlined btn-default change-color"
-                      data-toggle="color-menu">palette</span>
+                    <span class="material-symbols-outlined btn-default change-color" data-toggle="color-menu"
+                      title="אפשרויות רקע">palette</span>
 
                     <div class="color-menu active">
                       <span class="color-option gray-border default-border" data-color="gray"></span>
