--- a/kanban.html
+++ b/kanban.html
@@ -295,27 +295,6 @@
 
                   </div>
 
-                  <div class="small-boxes-container-second">
-                    <div class="small-box-second pop-in">
-                      <span class="material-symbols-outlined">
-                        home
-                      </span>
-                      <span>כתובות</span>
-                      <span class="material-symbols-outlined btn-default dynamic-btns">
-                        more_vert
-                      </span>
-                    </div>
-                    <div class="small-box-second pop-in">
-                      <span class="material-symbols-outlined">
-                        info
-                      </span>
-                      <span>מידע נוסף</span>
-                      <span class="material-symbols-outlined btn-default dynamic-btns">
-                        more_vert
-                      </span>
-                    </div>
-                  </div>
-
                   <div class="kanban-icons">
                     <span class="material-symbols-outlined btn-default change-color" data-toggle="color-menu"
                       title="אפשרויות רקע">palette</span>
@@ -328,9 +307,11 @@
                       <span class="color-option green-border" data-color="green"></span>
                     </div>
 
-                    <span class="material-symbols-outlined btn-default">attach_file</span>
-                    <span class="material-symbols-outlined btn-default">push_pin</span>
-                    <span class="material-symbols-outlined btn-default">print</span>
+                    <span class="material-symbols-outlined btn-default" title="הוספת קובץ">attach_file</span>
+                    <span class="material-symbols-outlined btn-default" title="כתובות">home</span>
+                    <span class="material-symbols-outlined btn-default" title="מידע נוסף">info</span>
+                    <span class="material-symbols-outlined btn-default" title="הצמדת הערה">push_pin</span>
+                    <span class="material-symbols-outlined btn-default" title="הדפסה">print</span>
                   </div>
                 </div>
                 <div class="kanban-note yellow-border">
