--- a/kanban.html
+++ b/kanban.html
@@ -359,7 +359,7 @@
                             <span class="round-img-container">
                               <img src="./up/imgs/passport.webp" alt="person-img">
                             </span>
-                            <span id="double-click" ondblclick="handleDoubleClick()">אלנה סגל</span>
+                            <span id="double-click" ondblclick="handleDoubleClick()">משימה</span>
                           </div>
                           <div class="title-right">
                             <span class="small-chip red">Manager</span>
