--- a/kanban.html
+++ b/kanban.html
@@ -365,7 +365,7 @@
                         </div>
                         <div class="right">
                           <span class="material-symbols-outlined btn-default change-color" data-toggle="color-menu" title="אפשרויות רקע">palette</span>
-                          <div class="color-menu ">
+                          <div class="color-menu">
                             <span class="color-option gray-border default-border" data-color="gray"></span>
                             <span class="color-option pink-border" data-color="pink"></span>
                             <span class="color-option blue-border" data-color="blue"></span>
@@ -471,7 +471,7 @@
                               <span class="material-symbols-outlined btn-default close-expand-new">
                                 close
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn" id="toggleButton">
+                              <span class="material-symbols-outlined btn-default expend-btn-note" id="toggleButton">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined btn-default minimize" data-target="box1"
@@ -674,7 +674,7 @@
                               <span class="material-symbols-outlined btn-default close-expand-new">
                                 close
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn">
+                              <span class="material-symbols-outlined btn-default expend-btn-note">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
@@ -775,7 +775,7 @@
                               <span class="material-symbols-outlined btn-default close-expand-new">
                                 close
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn">
+                              <span class="material-symbols-outlined btn-default expend-btn-note">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
@@ -1080,7 +1080,7 @@
                               <span class="material-symbols-outlined btn-default close-expand-new">
                                 close
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn">
+                              <span class="material-symbols-outlined btn-default expend-btn-note">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
@@ -1183,7 +1183,7 @@
                               <span class="material-symbols-outlined btn-default close-expand-new">
                                 close
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn">
+                              <span class="material-symbols-outlined btn-default expend-btn-note">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
@@ -1262,7 +1262,7 @@
                               <span class="material-symbols-outlined btn-default close-expand-new">
                                 close
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn">
+                              <span class="material-symbols-outlined btn-default expend-btn-note">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
@@ -1407,7 +1407,7 @@
                               <span class="material-symbols-outlined btn-default close-expand-new">
                                 close
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn">
+                              <span class="material-symbols-outlined btn-default expend-btn-note">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
@@ -1529,7 +1529,7 @@
                               <span class="material-symbols-outlined btn-default close-expand-new">
                                 close
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn">
+                              <span class="material-symbols-outlined btn-default expend-btn-note">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
@@ -1651,7 +1651,7 @@
                               <span class="material-symbols-outlined btn-default close-expand-new">
                                 close
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn">
+                              <span class="material-symbols-outlined btn-default expend-btn-note">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
@@ -1705,7 +1705,7 @@
                               <span class="material-symbols-outlined btn-default" id="open-calendar">
                                 event
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn">
+                              <span class="material-symbols-outlined btn-default expend-btn-note">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
