--- a/kanban.html
+++ b/kanban.html
@@ -471,7 +471,7 @@
                               <span class="material-symbols-outlined btn-default close-expand-new">
                                 close
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn-note" id="toggleButton">
+                              <span class="material-symbols-outlined btn-default expend-btn" id="toggleButton">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined btn-default minimize" data-target="box1"
@@ -674,7 +674,7 @@
                               <span class="material-symbols-outlined btn-default close-expand-new">
                                 close
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn-note">
+                              <span class="material-symbols-outlined btn-default expend-btn">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
@@ -775,7 +775,7 @@
                               <span class="material-symbols-outlined btn-default close-expand-new">
                                 close
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn-note">
+                              <span class="material-symbols-outlined btn-default expend-btn">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
@@ -1080,7 +1080,7 @@
                               <span class="material-symbols-outlined btn-default close-expand-new">
                                 close
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn-note">
+                              <span class="material-symbols-outlined btn-default expend-btn">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
@@ -1183,7 +1183,7 @@
                               <span class="material-symbols-outlined btn-default close-expand-new">
                                 close
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn-note">
+                              <span class="material-symbols-outlined btn-default expend-btn">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
@@ -1262,7 +1262,7 @@
                               <span class="material-symbols-outlined btn-default close-expand-new">
                                 close
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn-note">
+                              <span class="material-symbols-outlined btn-default expend-btn">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
@@ -1407,7 +1407,7 @@
                               <span class="material-symbols-outlined btn-default close-expand-new">
                                 close
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn-note">
+                              <span class="material-symbols-outlined btn-default expend-btn">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
@@ -1529,7 +1529,7 @@
                               <span class="material-symbols-outlined btn-default close-expand-new">
                                 close
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn-note">
+                              <span class="material-symbols-outlined btn-default expend-btn">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
@@ -1651,7 +1651,7 @@
                               <span class="material-symbols-outlined btn-default close-expand-new">
                                 close
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn-note">
+                              <span class="material-symbols-outlined btn-default expend-btn">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
@@ -1705,7 +1705,7 @@
                               <span class="material-symbols-outlined btn-default" id="open-calendar">
                                 event
                               </span>
-                              <span class="material-symbols-outlined btn-default expend-btn-note">
+                              <span class="material-symbols-outlined btn-default expend-btn">
                                 arrows_more_up
                               </span>
                               <span class="material-symbols-outlined showSingle btn-default" style="display: none;">
