--- a/kanban.html
+++ b/kanban.html
@@ -365,7 +365,7 @@
                         </div>
                         <div class="right">
                           <span class="material-symbols-outlined btn-default change-color" data-toggle="color-menu" title="אפשרויות רקע">palette</span>
-                          <div class="color-menu">
+                          <div class="color-menu active">
                             <span class="color-option gray-border default-border" data-color="gray"></span>
                             <span class="color-option pink-border" data-color="pink"></span>
                             <span class="color-option blue-border" data-color="blue"></span>
