--- a/kanban.html
+++ b/kanban.html
@@ -321,26 +321,7 @@
                       <span class="note-date">12-01-24</span>
                     </div>
                     <div class="line pink-border"></div>
-                    <div class="list-container">
-                      <div class="list">
-                        <div class="edit-content-menu__category clicked">
-                          הכל
-                        </div>
-                        <div class="edit-content-menu__category">עובדים</div>
-                        <div class="edit-content-menu__category">קשרים</div>
-                        <div
-                          class="edit-content-menu__category"
-                          title="קטגוריה שהיא ארוכה"
-                        >
-                          קטגוריה...
-                        </div>
-                      </div>
-                      <span
-                        class="material-symbols-outlined btn-default expand-btn"
-                      >
-                        expand_content
-                      </span>
-                    </div>
+
                     <div class="kanban-note-title">
                       עדכון שדה "מקור משני" ב"כרטסת לקוחות"
                     </div>
@@ -355,64 +336,6 @@
                           class="material-symbols-outlined add-icon-small"
                           >add</span
                         ></span
-                      >
-                    </div>
-
-                    <div class="kanban-icons">
-                      <span
-                        class="material-symbols-outlined btn-default change-color"
-                        data-toggle="color-menu"
-                        title="אפשרויות רקע"
-                        >palette</span
-                      >
-
-                      <div class="color-menu active">
-                        <span
-                          class="color-option gray-border default-border"
-                          data-color="gray"
-                        ></span>
-                        <span
-                          class="color-option pink-border"
-                          data-color="pink"
-                        ></span>
-                        <span
-                          class="color-option blue-border"
-                          data-color="blue"
-                        ></span>
-                        <span
-                          class="color-option yellow-border"
-                          data-color="yellow"
-                        ></span>
-                        <span
-                          class="color-option green-border"
-                          data-color="green"
-                        ></span>
-                      </div>
-
-                      <span
-                        class="material-symbols-outlined btn-default"
-                        title="הוספת קובץ"
-                        >attach_file</span
-                      >
-                      <span
-                        class="material-symbols-outlined btn-default"
-                        title="כתובות"
-                        >home</span
-                      >
-                      <span
-                        class="material-symbols-outlined btn-default"
-                        title="מידע נוסף"
-                        >info</span
-                      >
-                      <span
-                        class="material-symbols-outlined btn-default"
-                        title="הצמדת הערה"
-                        >push_pin</span
-                      >
-                      <span
-                        class="material-symbols-outlined btn-default"
-                        title="הדפסה"
-                        >print</span
                       >
                     </div>
                   </div>
@@ -3015,7 +2938,7 @@
                           </div>
                         </div>
                         <span
-                          class="material-symbols-outlined hide-single round-btn round-close-btn close-second-extend"
+                          class="material-symbols-outlined hide-single round-btn round-close-btn btn-default"
                           id="extend-btn-for-second-new"
                         >
                           expand_content
@@ -4342,56 +4265,6 @@
               <div class="kanban-content-container" id="ongoing">
                 <div class="kanban-content" id="column-win">
                   <div class="kanban-title">זכיה</div>
-                  <div class="kanban-note blue-border">
-                    <div class="kanban-note-header">
-                      <div>
-                        <span>משימה</span>
-                      </div>
-                      <span class="note-date">12-01-24</span>
-                    </div>
-                    <div class="line blue-border"></div>
-                    <div class="kanban-note-title">
-                      עדכון שדה "מקור משני" ב"כרטסת לקוחות"
-                    </div>
-                    <p class="kanban-note-para">
-                      בזמן תהליך הכנסת הלידים. השדה יההי מעודכן בהתאם לליד
-                      האחרון שהתקבל עבור אותו לקוח.
-                    </p>
-                    <div class="kanban-note-header">
-                      <span>210,000$</span>
-                      <span>משה, דוד, שלמה</span>
-                    </div>
-                    <div class="kanban-icons">
-                      <span
-                        class="material-symbols-outlined btn-default change-color"
-                        data-toggle="color-menu"
-                        >palette</span
-                      >
-
-                      <div class="color-menu active">
-                        <span
-                          class="color-option pink-border"
-                          data-color="pink"
-                        ></span>
-                        <span
-                          class="color-option blue-border"
-                          data-color="blue"
-                        ></span>
-                        <span
-                          class="color-option yellow-border"
-                          data-color="yellow"
-                        ></span>
-                        <span
-                          class="color-option green-border"
-                          data-color="green"
-                        ></span>
-                      </div>
-
-                      <span class="material-symbols-outlined btn-default"
-                        >person_add</span
-                      >
-                    </div>
-                  </div>
                 </div>
                 <div class="kanban-content" id="column-inprogress">
                   <div class="kanban-title">בעבודה</div>
