--- a/kanban.html
+++ b/kanban.html
@@ -369,58 +369,7 @@
                               <span class="small-chip green">Sales</span>
                             </div>
                           </div>
-                          <div class="left active" id="left-second">
-                            <div
-                              class="small-boxes-container"
-                              style="align-items: center"
-                            >
-                              <div
-                                class="small-box red-background"
-                                style="height: 50px; width: 120px; gap: 1rem"
-                              >
-                                <span
-                                  class="round-img-container"
-                                  style="height: 33px; width: 33px"
-                                >
-                                  <img
-                                    src="./up/imgs/passport.webp"
-                                    alt="person-img"
-                                  />
-                                </span>
-                                <span>אלנה סגל</span>
-                              </div>
-                              <div
-                                class="small-box"
-                                style="height: 50px; width: 120px; gap: 1rem"
-                              >
-                                <span
-                                  class="round-img-container"
-                                  style="height: 33px; width: 33px"
-                                >
-                                  <img
-                                    src="./up/imgs/person-2.jpg"
-                                    alt="person-img"
-                                  />
-                                </span>
-                                <span>רונה ראובני</span>
-                              </div>
-                              <div
-                                class="small-box"
-                                style="height: 50px; width: 120px; gap: 1rem"
-                              >
-                                <span
-                                  class="round-img-container"
-                                  style="height: 33px; width: 33px"
-                                >
-                                  <img
-                                    src="./up/imgs/person-3.jpg"
-                                    alt="person-img"
-                                  />
-                                </span>
-                                <span>אלון כהן</span>
-                              </div>
-                            </div>
-                          </div>
+
                           <div class="right">
                             <span
                               class="material-symbols-outlined btn-default change-color"
@@ -457,7 +406,15 @@
                               web_asset
                             </span>
 
-                            <div class="icon-container not-in-table">
+                            <a href="/person.html">
+                              <span
+                                class="material-symbols-outlined btn-default"
+                              >
+                                open_in_new
+                              </span>
+                            </a>
+
+                            <!-- <div class="icon-container not-in-table">
                               <span
                                 class="material-symbols-outlined bigger-icon"
                                 >mail</span
@@ -467,7 +424,7 @@
                                 id="new-mail-btn"
                                 >add</span
                               >
-                            </div>
+                            </div> -->
 
                             <span class="material-symbols-outlined btn-default">
                               more_vert
