--- a/task.html
+++ b/task.html
@@ -308,14 +308,14 @@
               </div>
               <div class="right">
                 <div class="flex-container">
-                  <div class="filter-tag">
-                    <span> תכנון </span>
+                  <div class="filter-tag green">
+                    <span>תכנון</span>
                     <span class="material-symbols-outlined">
                       arrow_drop_down
                     </span>
                   </div>
-                  <div class="filter-tag">
-                    <span> 12/02/24 </span>
+                  <div class="filter-tag clicked">
+                    <span>12/02/24</span>
                     <span class="material-symbols-outlined">
                       arrow_drop_down
                     </span>
