--- a/person.html
+++ b/person.html
@@ -268,6 +268,31 @@
       <!-- -*-*-*-*-*-*-*-*--*-*-*- Card Section - Person --*-*-*-*-*-*-*-*-*-*-* -->
       <section class="card-container" id="personCard">
         <div class="card">
+          <div class="top-container">
+            <div class="card__navigate">
+              <h4>פעולות</h4>
+              <span class="material-symbols-outlined"> chevron_left </span>
+              <h4>איש</h4>
+            </div>
+
+            <div class="right">
+              <span class="material-symbols-outlined open-in-new btn-default">
+                web_asset
+              </span>
+              <div class="icon-container not-in-table">
+                <span class="material-symbols-outlined bigger-icon">mail</span>
+                <span
+                  class="material-symbols-outlined smaller-icon green"
+                  id="new-mail-btn"
+                  >add</span
+                >
+              </div>
+              <span class="material-symbols-outlined btn-default">
+                more_vert
+              </span>
+              <span class="material-symbols-outlined btn-default"> close </span>
+            </div>
+          </div>
           <div class="card-header long-header">
             <div class="top">
               <div class="left" id="left">
@@ -325,24 +350,23 @@
                 </div>
               </div>
               <div class="right">
-                <span class="material-symbols-outlined open-in-new btn-default">
-                  web_asset
+                <span class="edit-content medium">
+                  <span class="label">
+                    <span>סטטוס</span>
+                  </span>
+                  <span class="edit-field">
+                    <span class="value-text">תכנון</span>
+                    <span class="material-symbols-outlined"> expand_more </span>
+                  </span>
                 </span>
-                <div class="icon-container not-in-table">
-                  <span class="material-symbols-outlined bigger-icon"
-                    >mail</span
-                  >
-                  <span
-                    class="material-symbols-outlined smaller-icon green"
-                    id="new-mail-btn"
-                    >add</span
-                  >
-                </div>
-                <span class="material-symbols-outlined btn-default">
-                  more_vert
-                </span>
-                <span class="material-symbols-outlined btn-default">
-                  close
+                <span class="edit-content medium">
+                  <span class="label">
+                    <span>תאריך טיפול הבא</span>
+                  </span>
+                  <span class="edit-field">
+                    <span class="value-text">14/08/24</span>
+                    <span class="material-symbols-outlined"> expand_more </span>
+                  </span>
                 </span>
               </div>
             </div>
