--- a/person.html
+++ b/person.html
@@ -350,24 +350,32 @@
                 </div>
               </div>
               <div class="right">
-                <span class="edit-content medium">
-                  <span class="label">
-                    <span>סטטוס</span>
-                  </span>
-                  <span class="edit-field">
-                    <span class="value-text">תכנון</span>
-                    <span class="material-symbols-outlined"> expand_more </span>
-                  </span>
-                </span>
-                <span class="edit-content medium">
-                  <span class="label">
-                    <span>תאריך טיפול הבא</span>
-                  </span>
-                  <span class="edit-field">
-                    <span class="value-text">14/08/24</span>
-                    <span class="material-symbols-outlined"> expand_more </span>
-                  </span>
-                </span>
+                <div class="fields-wrapper">
+                  <div class="fields">
+                    <span class="edit-content medium">
+                      <span class="label">
+                        <span>סטטוס</span>
+                      </span>
+                      <span class="edit-field">
+                        <span class="value-text">תכנון</span>
+                        <span class="material-symbols-outlined">
+                          expand_more
+                        </span>
+                      </span>
+                    </span>
+                    <span class="edit-content medium">
+                      <span class="label">
+                        <span>תאריך טיפול הבא</span>
+                      </span>
+                      <span class="edit-field">
+                        <span class="value-text">14/08/24</span>
+                        <span class="material-symbols-outlined">
+                          expand_more
+                        </span>
+                      </span>
+                    </span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
