--- a/person.html
+++ b/person.html
@@ -307,6 +307,12 @@
                 <div class="title-right">
                   <span class="small-chip red">Manager</span>
                   <span class="small-chip green">Sales</span>
+                  <div class="small-chip neutral">
+                    <span class="material-symbols-outlined btn-default">
+                      add
+                    </span>
+                    <span>תגית</span>
+                  </div>
                 </div>
               </div>
               <div class="left active" id="left-second">
@@ -350,32 +356,21 @@
                 </div>
               </div>
               <div class="right">
-                <div class="fields-wrapper">
-                  <div class="fields">
-                    <span class="edit-content medium">
-                      <span class="label">
-                        <span>סטטוס</span>
-                      </span>
-                      <span class="edit-field">
-                        <span class="value-text">תכנון</span>
-                        <span class="material-symbols-outlined">
-                          expand_more
-                        </span>
-                      </span>
-                    </span>
-                    <span class="edit-content medium">
-                      <span class="label">
-                        <span>תאריך טיפול הבא</span>
-                      </span>
-                      <span class="edit-field">
-                        <span class="value-text">14/08/24</span>
-                        <span class="material-symbols-outlined">
-                          expand_more
-                        </span>
-                      </span>
-                    </span>
-                  </div>
-                </div>
+                <span class="edit-content small">
+                  <span class="edit-field">
+                    <span class="value-text">תכנון</span>
+                    <span class="material-symbols-outlined"> expand_more </span>
+                  </span>
+                </span>
+                <span class="edit-content medium">
+                  <span class="label">
+                    <span>לטיפול</span>
+                  </span>
+                  <span class="edit-field">
+                    <span class="value-text">14/08/24</span>
+                    <span class="material-symbols-outlined"> expand_more </span>
+                  </span>
+                </span>
               </div>
             </div>
           </div>
