--- a/person.html
+++ b/person.html
@@ -356,13 +356,18 @@
                 </div>
               </div>
               <div class="right">
-                <span class="edit-content small">
+                <span class="edit-content">
+                  <span class="label pink-label">
+                    <span class="material-symbols-outlined">
+                      published_with_changes
+                    </span>
+                  </span>
                   <span class="edit-field">
                     <span class="value-text">תכנון</span>
                     <span class="material-symbols-outlined"> expand_more </span>
                   </span>
                 </span>
-                <span class="edit-content medium">
+                <span class="edit-content">
                   <span class="label">
                     <span>לטיפול</span>
                   </span>
