--- a/person.html
+++ b/person.html
@@ -356,7 +356,10 @@
                 </div>
               </div>
               <div class="right">
-                <span class="edit-content">
+                <span>מתוכנן</span>
+                <span class="material-symbols-outlined stop-icon"> stop </span>
+                <span>24/08/1989</span>
+                <!-- <span class="edit-content">
                   <span class="label pink-label">
                     <span class="material-symbols-outlined">
                       published_with_changes
@@ -366,8 +369,8 @@
                     <span class="value-text">תכנון</span>
                     <span class="material-symbols-outlined"> expand_more </span>
                   </span>
-                </span>
-                <span class="edit-content">
+                </span> -->
+                <!-- <span class="edit-content">
                   <span class="label">
                     <span>לטיפול</span>
                   </span>
@@ -375,7 +378,7 @@
                     <span class="value-text">14/08/24</span>
                     <span class="material-symbols-outlined"> expand_more </span>
                   </span>
-                </span>
+                </span> -->
               </div>
             </div>
           </div>
