--- a/person.html
+++ b/person.html
@@ -356,12 +356,18 @@
                 </div>
               </div>
               <div class="right">
-                <span>מתוכנן</span>
+                <div class="flex-container">
+                  <span class="material-symbols-outlined on-going-status-icon">
+                    published_with_changes
+                  </span>
+                  <span>מתוכנן</span>
+                </div>
+
                 <span class="material-symbols-outlined stop-icon"> stop </span>
                 <span>24/08/1989</span>
                 <!-- <span class="edit-content">
-                  <span class="label pink-label">
-                    <span class="material-symbols-outlined">
+                  <span class="label">
+                    <span class="material-symbols-outlined on-going-status-icon">
                       published_with_changes
                     </span>
                   </span>
@@ -369,8 +375,8 @@
                     <span class="value-text">תכנון</span>
                     <span class="material-symbols-outlined"> expand_more </span>
                   </span>
-                </span> -->
-                <!-- <span class="edit-content">
+                </span>
+                <span class="edit-content">
                   <span class="label">
                     <span>לטיפול</span>
                   </span>
