--- a/person.html
+++ b/person.html
@@ -357,8 +357,8 @@
               </div>
               <div class="right">
                 <div class="flex-container">
-                  <span class="material-symbols-outlined on-going-status-icon">
-                    published_with_changes
+                  <span class="material-symbols-outlined green-circle">
+                    circle
                   </span>
                   <span>מתוכנן</span>
                 </div>
