--- a/person.html
+++ b/person.html
@@ -304,15 +304,6 @@
                     >אלנה סגל</span
                   >
                 </div>
-                <div class="title-right">
-                  <span class="small-chip red">Manager</span>
-                  <span class="small-chip green">Sales</span>
-                  <div class="small-chip neutral">
-                    <span class="material-symbols-outlined btn-default">
-                      add
-                    </span>
-                  </div>
-                </div>
               </div>
               <div class="left active" id="left-second">
                 <div class="small-boxes-container" style="align-items: center">
@@ -384,6 +375,13 @@
                     <span class="material-symbols-outlined"> expand_more </span>
                   </span>
                 </span> -->
+              </div>
+            </div>
+            <div class="chips-container">
+              <span class="small-chip red">Manager</span>
+              <span class="small-chip green">Sales</span>
+              <div class="small-chip neutral">
+                <span class="material-symbols-outlined btn-default"> add </span>
               </div>
             </div>
           </div>
