--- a/person.html
+++ b/person.html
@@ -346,35 +346,29 @@
                 </div>
               </div>
               <div class="right">
-                <div class="flex-container">
-                  <span class="material-symbols-outlined green-circle">
-                    circle
-                  </span>
-                  <span>מתוכנן</span>
-                </div>
-
-                <span class="material-symbols-outlined stop-icon"> stop </span>
-                <span>24/08/1989</span>
-                <!-- <span class="edit-content">
+                <span class="edit-content">
                   <span class="label">
-                    <span class="material-symbols-outlined on-going-status-icon">
-                      published_with_changes
-                    </span>
+                    <span>סטטוס</span>
                   </span>
                   <span class="edit-field">
-                    <span class="value-text">תכנון</span>
+                    <span class="value-text">
+                      <span class="material-symbols-outlined green-circle">
+                        circle
+                      </span>
+                      תכנון</span
+                    >
                     <span class="material-symbols-outlined"> expand_more </span>
                   </span>
                 </span>
                 <span class="edit-content">
-                  <span class="label">
+                  <!-- <span class="label">
                     <span>לטיפול</span>
-                  </span>
+                  </span> -->
                   <span class="edit-field">
                     <span class="value-text">14/08/24</span>
                     <span class="material-symbols-outlined"> expand_more </span>
                   </span>
-                </span> -->
+                </span>
               </div>
             </div>
             <div class="chips-container">
